--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,7 @@
     rel="stylesheet"
     href="https://bootswatch.com/4/journal/bootstrap.min.css"
   />
-  <title>Tourney Base</title>
+  <title>Tourney Base - Beta</title>
   <link rel="stylesheet" type="text/css" href="/css/banner.css">
   <link rel="stylesheet" type="text/css" href="/css/signInStyles.css">
   <link rel="stylesheet" type="text/css" href="/css/bracketStyles.css">
@@ -25,6 +25,7 @@
   <%- body %>
 </div>
 <script type="text/javascript" src="/js/bracket.js"></script>
+<script type="text/javascript" src="/js/leaderboardRender.js"></script>
 <script
 src="https://code.jquery.com/jquery-3.3.1.js"
 integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
