--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 <%- contentFor('header') %>
   <div class="banner">
 <img src="/img/TourneyBaseLogo.png" alt="logo" class="logo">
-    <div class="title">Tourney Center </div>
+    <div class="title">Tourney Center - Beta</div>
   </div>
 <em%-contentFor('body') %>
 <body>
