--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -10,7 +10,7 @@
 <%- contentFor('header') %>
     <div class="banner">
       <img src="/img/TourneyBaseLogo.png" alt="logo" class="logo">
-      <div class="title">Tourney Center </div>
+      <div class="title">Tourney Center - Beta</div>
       <nav>
           <div class="menu-wrap">
               <input type="checkbox" class="toggler">
@@ -31,13 +31,13 @@
     <div class="rulesList">
     <ul>
         <li>
-            As of now, you can only make one bracket.
-        </li>
-        <li>
-            score is calculated based on the amount of rounds you correctly predict.
+            Make your predictions for the NBA Playoffs.
         </li>
         <li>
             In the first round, you get 10 points per correct pick. Every round, the point value per pick doubles. This means that each round you can get up to 80 points.
+        </li>
+        <li>
+            See how your score stacks up against the rest!
         </li>
     </ul>
     </div>
