--- a/views/setBracket.ejs
+++ b/views/setBracket.ejs
@@ -10,7 +10,7 @@
 <%- contentFor('header') %>
     <div class="banner">
       <img src="/img/TourneyBaseLogo.png" alt="logo" class="logo">
-      <div class="title">Tourney Base </div>
+      <div class="title">Tourney Base - Beta</div>
       <nav>
           <div class="menu-wrap">
               <input type="checkbox" class="toggler">
