--- a/public/css/leaderboard.css
+++ b/public/css/leaderboard.css
@@ -1,5 +1,5 @@
 .leaderboard {
-    width: 700px;
+    width: 500px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -14,5 +14,10 @@
     padding-right: 25px;
     padding-top: 10px;
     font-family: arial;
-    font-size: 35px;
+    font-size: 15px;
+}
+.leaderboard li {
+    height: 25px;
+    list-style: none;
+    border: 2px rgb(82, 81, 81);
 }
