--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -10,7 +10,7 @@
 <%- contentFor('header') %>
     <div class="banner">
       <img src="/img/TourneyBaseLogo.png" alt="logo" class="logo">
-      <div class="title">Tourney Center </div>
+      <div class="title">Tourney Center - Beta </div>
       <nav>
           <div class="menu-wrap">
               <input type="checkbox" class="toggler">
