--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -10,7 +10,7 @@
 <%- contentFor('header') %>
     <div class="banner">
       <img src="/img/TourneyBaseLogo.png" alt="logo" class="logo">
-      <div class="title">Tourney Center </div>
+      <div class="title">Tourney Center - Beta </div>
       <nav>
           <div class="menu-wrap">
               <input type="checkbox" class="toggler">
@@ -29,7 +29,10 @@
 <%- contentFor('body') %>
 <body>
   <div class="leaderboard">
-    Leaderboard will be available once the playoffs start.
+
+    <ul>
+      <%- leaderboard %>
+    </ul>
   </div>
 </body>
 </html>
