--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <%- contentFor('header') %>
   <div class="banner">
     <img src="/img/TourneyBaseLogo.png" alt="logo" class="logo">
-        <div class="title">Tourney Center </div>
+        <div class="title">Tourney Center - Beta</div>
       </div>
 <%-contentFor('body') %>
     <div class="card card-body registerWrap">
