--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,7 @@
     rel="stylesheet"
     href="https://bootswatch.com/4/journal/bootstrap.min.css"
   />
-  <title>Tourney Base - Beta</title>
+  <title>Tourney Center - Beta</title>
   <link rel="stylesheet" type="text/css" href="/css/banner.css">
   <link rel="stylesheet" type="text/css" href="/css/signInStyles.css">
   <link rel="stylesheet" type="text/css" href="/css/bracketStyles.css">
