Optimized css for mobile

--- a/public/css/bracketStyles.css
+++ b/public/css/bracketStyles.css
@@ -1,11 +1,10 @@
 
 body {
     width: 100%;
-    min-width:100%;
     background: rgb(238, 238, 238);;
     --saveCursor: default;
     --teamCursor: default;
-
+    position: absolute;
 }
 .bracketHeader {
     position: absolute;
@@ -154,3 +153,7 @@ input[type='radio']:checked:after {
     --save-hover-bg: rgb(200,200,200);
     background-color: var(--save-hover-bg);
 }
+@media screen and (max-width:1400px) {
+    /* CSS for screens that are 1400 pixels or less will be put in this section */
+    
+  }
