--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -28,8 +28,10 @@
     </div>
 <%- contentFor('body') %>
 <body>
+  <div class="groupsHolder">
     <div class="groups">
         Coming Soon...
+    </div>
     </div>
 </body>
 </html>
