--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -28,11 +28,13 @@
     </div>
 <%- contentFor('body') %>
 <body>
+  <div class="leaderboardHolder">
   <div class="leaderboard">
 
     <ul>
       <%- leaderboard %>
     </ul>
+  </div>
   </div>
 </body>
 </html>
