--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,8 +13,7 @@
   </div>
 <em%-contentFor('body') %>
 <body>
-  <div class="holder">
-    <div></div>
+  <div class="signInHolder">
       <div class="card card-body loginWrap">
         <h1 class="text-center mb-3"><em class="fas fa-sign-in-alt"></em> Login</h1>
         <%- include ('./partials/messages') -%>
@@ -45,7 +44,6 @@
           No Account? <a href="/users/register">Register</a>
         </p>
       </div>
-      <div></div>
     </div>
 </body>
 </html>
