--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -28,6 +28,7 @@
     </div>
 <%- contentFor('body') %>
 <body>
+    <div class="rulesHolder">
     <div class="rulesList">
     <ul>
         <li>
@@ -40,6 +41,7 @@
             See how your score stacks up against the rest!
         </li>
     </ul>
+    </div>
     </div>
 </body>
 </html>
