--- a/public/css/banner.css
+++ b/public/css/banner.css
@@ -2,7 +2,7 @@
     --primary-color1: rgb(111, 207, 224);
     --primary-color2:  rgb(63, 164, 182);
     --secondary-color: rgb(41, 41, 41);
-    --secondary-color2: lightgrey;
+    --secondary-color2: #d3d3d3;
 }
 * {
     margin: 0;
@@ -20,8 +20,7 @@
     padding-bottom: 4px;
 }
 .title {
-    top: 12px;
-    font-size: 25px;
+    font-size: 18px;
     position: absolute;
     left: 60px;
 }
@@ -31,13 +30,9 @@ img {
 #name {
     float: right;
     margin-right: 120px;
-    margin-top: 2px;
     font-family:Tahoma;
 }
 .banner {
-    position: fixed;
-    top: 0px;
-    left: 0px;
     width: 100%;
     height: 55px;
     background: linear-gradient(to right, var(--primary-color1), var(--primary-color2));
@@ -68,7 +63,7 @@ list-style-type: none;
 /* MENU STYLES */
 .menu-wrap {
     position: absolute;
-    right: 10px;
+    right: 0px;
     top: 0px;
     z-index: 1;
   }
@@ -194,4 +189,14 @@ list-style-type: none;
 }
 #logout:hover {
   border-radius: 0px 0px 8px 8px;
+}
+@media screen and (max-width: 1250px) {
+  .title {
+    font-size: 12pt;
+    left: 50px;
+  }
+  #name {
+    margin-right: 60px;
+    font-size: 12pt;
+  }
 }
