--- a/public/css/groups.css
+++ b/public/css/groups.css
@@ -1,10 +1,11 @@
+.groupsHolder {
+    display: grid;
+    place-items: center;
+}
 .groups {
-    width: 700px;
+    width: 40%;
     height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin-top: 8%;
     text-align: center;
     color: black;
     background-color: white;
@@ -14,5 +15,10 @@
     padding-right: 25px;
     padding-top: 10px;
     font-family: arial;
-    font-size: 35px;
+    font-size: 25px;
+}
+@media screen and (max-width: 1250px) {
+    .groups {
+        width: 70%;
+    }
 }
