--- a/public/css/leaderboard.css
+++ b/public/css/leaderboard.css
@@ -1,9 +1,10 @@
+.leaderboardHolder {
+display: grid;
+place-items: center;
+}
 .leaderboard {
-    width: 500px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width:45%;
+    margin-top: 7%;
     height: auto;
     text-align: center;
     color: black;
@@ -20,4 +21,9 @@
     height: 25px;
     list-style: none;
     border: 2px rgb(82, 81, 81);
+}
+@media screen and (max-width:1250px) {
+    .leaderboard {
+        width: 70%;
+    }
 }
