--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,6 +4,7 @@
         <div class="title">Tourney Center - Beta</div>
       </div>
 <%-contentFor('body') %>
+  <div class="signInHolder">
     <div class="card card-body registerWrap">
       <h1 class="text-center mb-3">
         <en class="fas fa-user-plus"></en> Register
@@ -49,3 +50,4 @@
       </form>
       <p class="lead mt-4">Have An Account? <a href="/users/login">Login</a></p>
     </div>
+  </div>
